mitre/internal/mysql/Network-Ingress/deny-external-communication-from-mysql-pod.yml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "deny-external-communication-from-mysql-pod"
spec:
  endpointSelector:
    matchLabels:
      {}
  ingressDeny:
  - fromEntities:
    - "world"
  ingress:
  - fromEndpoints:
    - matchLabels:
        {}
  egressDeny:
  - toEntities:
    - "world"
  egress:
  - toEndpoints:
    - matchLabels:
        {}
